# oak-sdk-mods

./: README.md
DialogTweaks/: DialogTweaks.sdkmod  ReadMe.md  __init__.py  pyproject.toml
PickupAsTrash/: PickupAsTrash.sdkmod  Readme.md  __init__.py  pyproject.toml
